--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,7 +5,7 @@
         <div id="container">
             <div id="welcome">
                 <h1><span>Welcome to</span> Symfony {{ constant('Symfony\\Component\\HttpKernel\\Kernel::VERSION') }}</h1>
-            	<h1>ALLAH WACKBAR !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</h1>
+            	<h1>AHIIII is it workng?!!!</h1>
 </div>
 
             <div id="status">
