--- a/src/InnovationBundle/Resources/views/Phone/acceuilP.html.twig
+++ b/src/InnovationBundle/Resources/views/Phone/acceuilP.html.twig
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Acceuil Phones</title>
   </head>
   <body>
 
@@ -15,10 +15,9 @@
       </tr>
 
       <tr>
-        <td> {{ phone }}</td>
+        <td> test</td>
+        <td> {{ phone }} </td>
       </tr>
 
-
-  </table>
   </body>
 </html>
