accueil mis dans controller, la page marche

--- a/src/InnovationBundle/Resources/views/Category/categoryList.html.twig
+++ b/src/InnovationBundle/Resources/views/Category/categoryList.html.twig
@@ -15,8 +15,9 @@
 
       <tr>
         <td> test</td>
-        <td> {{ categories }} </td>
+        <td> {{ category }} </td>
       </tr>
+    </table>
 
   </body>
 </html>
