--- a/src/InnovationBundle/Resources/views/Category/categoryList.html.twig
+++ b/src/InnovationBundle/Resources/views/Category/categoryList.html.twig
@@ -7,15 +7,17 @@
 
     <table style="width:100%">
       <tr>
-        <th>Marque</th>
-        <th>Price</th>
-        <th>Date</th>
-        <th>Comment</th>
+        <th>price</th>
+        <th>marque</th>
+        <th>année</th>
+        <th>test</th>
       </tr>
 
       <tr>
-        <td> test</td>
-        <td> {{ category }} </td>
+        <td id=phone>Phone</td>
+        <td id=pc> PC</td>
+        <td id=drones>Drones </td>
+        <td id=other>Other</td>
       </tr>
     </table>
 
